examples/python/simple.output
Grammar

    0 $accept: result $end

    1 result: list

    2 list: %empty
    3     | list item

    4 item: TEXT
    5     | NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TEXT <str> (258) 4
    NUMBER <int> (259) 5


Nonterminals, with rules where they appear

    $accept (5)
        on left: 0
    result (6)
        on left: 1
        on right: 0
    list <list> (7)
        on left: 2 3
        on right: 1 3
    item <str> (8)
        on left: 4 5
        on right: 3


State 0

    0 $accept: • result $end

    $default  reduce using rule 2 (list)

    result  go to state 1
    list    go to state 2


State 1

    0 $accept: result • $end

    $end  shift, and go to state 3


State 2

    1 result: list •
    3 list: list • item

    TEXT    shift, and go to state 4
    NUMBER  shift, and go to state 5

    $default  reduce using rule 1 (result)

    item  go to state 6


State 3

    0 $accept: result $end •

    $default  accept


State 4

    4 item: TEXT •

    $default  reduce using rule 4 (item)


State 5

    5 item: NUMBER •

    $default  reduce using rule 5 (item)


State 6

    3 list: list item •

    $default  reduce using rule 3 (list)
